# s3em

./: .dockerignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  GIT_FLOW.md  README.md  cliff.toml  compose.yml
.github/workflows/: ci.yml  release-prepare.yml  release.yml
quadlets/: s3em.container  s3em.volume
src/: auth.rs  config.rs  error.rs  main.rs  models.rs
src/api/: events.rs  files.rs  health.rs  mod.rs
src/db/: events.rs  files.rs  mod.rs
src/events/: mod.rs
src/storage/: mod.rs
