[package]
name = "s3em"
version = "0.1.0"
description = "A lightweight REST API gateway for S3-compatible object storage with idempotent uploads, SSE events, and JWT auth."
license = "MIT"
repository = "https://github.com/atareao/s3em"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
mime_guess = "2"
futures-util = "0.3"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
async-stream = "0.3"
anyhow = "1"
jsonwebtoken = "9"